<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.younotif.MainActivity" >

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom" />
	<!-- New -->
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          android:showAsAction="ifRoom"/>
    
    
    <item android:id="@+id/action_group"
          android:title="@string/action_group"
          android:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never"/>
    <item android:id="@+id/action_consult"
          android:title="@string/action_consult"
          android:showAsAction="never"/>
    
</menu>
