<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:background="#1F4788"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" 
                android:paddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="vertical">

                    <Button
                            android:id="@+id/btnCalendar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Ajouter au calendrier" />
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="horizontal"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >
					
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/action_NotifType"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/detailTxtType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:text="@string/action_group2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/detailTxtgroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:text="@string/period"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/detailTxtPeriod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_background_selector"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_Title"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/detailTxtTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:text="@string/action_NotifContent"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/detailTxtContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_background_selector"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_NotifDay"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/detailTxtDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_background_selector"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:text="@string/action_BeginDate"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/detailTxtBeginD"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_background_selector"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:text="@string/action_BeginTime"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/detailTxtBeginHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_background_selector"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:text="@string/action_EndDate"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/detailTxtEndD"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_background_selector"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:text="@string/action_EndTime"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/detailTxtEndHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|top"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        
                    </LinearLayout>
                    
                </LinearLayout>
                
            </FrameLayout>
            
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>